--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>hello.dev</groupId>
-	<artifactId>DrivingSchool</artifactId>
+	<artifactId>DrivingSchoolBackEnd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>DrivingSchool</name>
 	<description>Demo project for Spring Boot</description>
